// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`part-to-whole funnel canvas renders default vertical funnel — one segment per numeric field 1`] = `
[
{"type":"save","props":{}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"strokeStyle","props":{"value":"#73bf69"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":10}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":200,"y":82.5}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":200,"y":82.5}}]}},
{"type":"strokeStyle","props":{"value":"#f2cc0c"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":200,"y":127.5}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":200,"y":127.5}}]}},
{"type":"strokeStyle","props":{"value":"#5794f2"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":200,"y":172.5}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":200,"y":172.5}}]}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"fillStyle","props":{"value":"#73bf69"}},
{"type":"strokeStyle","props":{"value":"#ffffff"}},
{"type":"lineJoin","props":{"value":"round"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":80,"y":60}},
{"type":"lineTo","props":{"x":320,"y":60}},
{"type":"lineTo","props":{"x":260,"y":105}},
{"type":"lineTo","props":{"x":140,"y":105}},
{"type":"closePath","props":{}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":80,"y":60}},{"type":"lineTo","props":{"x":320,"y":60}},{"type":"lineTo","props":{"x":260,"y":105}},{"type":"lineTo","props":{"x":140,"y":105}},{"type":"closePath","props":{}}],"fillRule":"nonzero"}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":80,"y":60}},{"type":"lineTo","props":{"x":320,"y":60}},{"type":"lineTo","props":{"x":260,"y":105}},{"type":"lineTo","props":{"x":140,"y":105}},{"type":"closePath","props":{}}]}},
{"type":"fillStyle","props":{"value":"#f2cc0c"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":140,"y":105}},
{"type":"lineTo","props":{"x":260,"y":105}},
{"type":"lineTo","props":{"x":215,"y":150}},
{"type":"lineTo","props":{"x":185,"y":150}},
{"type":"closePath","props":{}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":140,"y":105}},{"type":"lineTo","props":{"x":260,"y":105}},{"type":"lineTo","props":{"x":215,"y":150}},{"type":"lineTo","props":{"x":185,"y":150}},{"type":"closePath","props":{}}],"fillRule":"nonzero"}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":140,"y":105}},{"type":"lineTo","props":{"x":260,"y":105}},{"type":"lineTo","props":{"x":215,"y":150}},{"type":"lineTo","props":{"x":185,"y":150}},{"type":"closePath","props":{}}]}},
{"type":"fillStyle","props":{"value":"#5794f2"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":185,"y":150}},
{"type":"lineTo","props":{"x":215,"y":150}},
{"type":"lineTo","props":{"x":200,"y":195}},
{"type":"closePath","props":{}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":185,"y":150}},{"type":"lineTo","props":{"x":215,"y":150}},{"type":"lineTo","props":{"x":200,"y":195}},{"type":"closePath","props":{}}],"fillRule":"nonzero"}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":185,"y":150}},{"type":"lineTo","props":{"x":215,"y":150}},{"type":"lineTo","props":{"x":200,"y":195}},{"type":"closePath","props":{}}]}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"fillStyle","props":{"value":"#000000"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":2}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"center"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"A","x":200,"y":82.5,"maxWidth":null}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"center"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"B","x":200,"y":127.5,"maxWidth":null}},
{"type":"fillStyle","props":{"value":"#ffffff"}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"center"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"C","x":200,"y":172.5,"maxWidth":null}},
{"type":"restore","props":{}}
]
`;

exports[`part-to-whole funnel canvas renders horizontal orient 1`] = `
[
{"type":"save","props":{}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"strokeStyle","props":{"value":"#73bf69"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":10}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":120,"y":127.5}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":120,"y":127.5}}]}},
{"type":"strokeStyle","props":{"value":"#f2cc0c"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":200,"y":127.5}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":200,"y":127.5}}]}},
{"type":"strokeStyle","props":{"value":"#5794f2"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":280,"y":127.5}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":280,"y":127.5}}]}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"fillStyle","props":{"value":"#73bf69"}},
{"type":"strokeStyle","props":{"value":"#ffffff"}},
{"type":"lineJoin","props":{"value":"round"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":80,"y":60}},
{"type":"lineTo","props":{"x":80,"y":195}},
{"type":"lineTo","props":{"x":160,"y":161.25}},
{"type":"lineTo","props":{"x":160,"y":93.75}},
{"type":"closePath","props":{}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":80,"y":60}},{"type":"lineTo","props":{"x":80,"y":195}},{"type":"lineTo","props":{"x":160,"y":161.25}},{"type":"lineTo","props":{"x":160,"y":93.75}},{"type":"closePath","props":{}}],"fillRule":"nonzero"}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":80,"y":60}},{"type":"lineTo","props":{"x":80,"y":195}},{"type":"lineTo","props":{"x":160,"y":161.25}},{"type":"lineTo","props":{"x":160,"y":93.75}},{"type":"closePath","props":{}}]}},
{"type":"fillStyle","props":{"value":"#f2cc0c"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":160,"y":93.75}},
{"type":"lineTo","props":{"x":160,"y":161.25}},
{"type":"lineTo","props":{"x":240,"y":135.9375}},
{"type":"lineTo","props":{"x":240,"y":119.0625}},
{"type":"closePath","props":{}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":160,"y":93.75}},{"type":"lineTo","props":{"x":160,"y":161.25}},{"type":"lineTo","props":{"x":240,"y":135.9375}},{"type":"lineTo","props":{"x":240,"y":119.0625}},{"type":"closePath","props":{}}],"fillRule":"nonzero"}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":160,"y":93.75}},{"type":"lineTo","props":{"x":160,"y":161.25}},{"type":"lineTo","props":{"x":240,"y":135.9375}},{"type":"lineTo","props":{"x":240,"y":119.0625}},{"type":"closePath","props":{}}]}},
{"type":"fillStyle","props":{"value":"#5794f2"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":240,"y":119.0625}},
{"type":"lineTo","props":{"x":240,"y":135.9375}},
{"type":"lineTo","props":{"x":320,"y":127.5}},
{"type":"closePath","props":{}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":240,"y":119.0625}},{"type":"lineTo","props":{"x":240,"y":135.9375}},{"type":"lineTo","props":{"x":320,"y":127.5}},{"type":"closePath","props":{}}],"fillRule":"nonzero"}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":240,"y":119.0625}},{"type":"lineTo","props":{"x":240,"y":135.9375}},{"type":"lineTo","props":{"x":320,"y":127.5}},{"type":"closePath","props":{}}]}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"fillStyle","props":{"value":"#000000"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":2}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"center"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"A","x":120,"y":127.5,"maxWidth":null}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"center"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"B","x":200,"y":127.5,"maxWidth":null}},
{"type":"fillStyle","props":{"value":"#ffffff"}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"center"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"C","x":280,"y":127.5,"maxWidth":null}},
{"type":"restore","props":{}}
]
`;

exports[`part-to-whole funnel canvas renders name + value + percent labels (All values, one segment per row) 1`] = `
[
{"type":"save","props":{}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"strokeStyle","props":{"value":"#73bf69"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":10}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":200,"y":76.875}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":200,"y":76.875}}]}},
{"type":"strokeStyle","props":{"value":"#5794f2"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":200,"y":110.625}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":200,"y":110.625}}]}},
{"type":"strokeStyle","props":{"value":"#f2cc0c"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":200,"y":144.375}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":200,"y":144.375}}]}},
{"type":"strokeStyle","props":{"value":"#ff9830"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":200,"y":178.125}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":200,"y":178.125}}]}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"fillStyle","props":{"value":"#73bf69"}},
{"type":"strokeStyle","props":{"value":"#ffffff"}},
{"type":"lineJoin","props":{"value":"round"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":80,"y":60}},
{"type":"lineTo","props":{"x":320,"y":60}},
{"type":"lineTo","props":{"x":283.72093,"y":93.75}},
{"type":"lineTo","props":{"x":116.27907,"y":93.75}},
{"type":"closePath","props":{}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":80,"y":60}},{"type":"lineTo","props":{"x":320,"y":60}},{"type":"lineTo","props":{"x":283.72093,"y":93.75}},{"type":"lineTo","props":{"x":116.27907,"y":93.75}},{"type":"closePath","props":{}}],"fillRule":"nonzero"}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":80,"y":60}},{"type":"lineTo","props":{"x":320,"y":60}},{"type":"lineTo","props":{"x":283.72093,"y":93.75}},{"type":"lineTo","props":{"x":116.27907,"y":93.75}},{"type":"closePath","props":{}}]}},
{"type":"fillStyle","props":{"value":"#5794f2"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":116.27907,"y":93.75}},
{"type":"lineTo","props":{"x":283.72093,"y":93.75}},
{"type":"lineTo","props":{"x":269.767442,"y":127.5}},
{"type":"lineTo","props":{"x":130.232558,"y":127.5}},
{"type":"closePath","props":{}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":116.27907,"y":93.75}},{"type":"lineTo","props":{"x":283.72093,"y":93.75}},{"type":"lineTo","props":{"x":269.767442,"y":127.5}},{"type":"lineTo","props":{"x":130.232558,"y":127.5}},{"type":"closePath","props":{}}],"fillRule":"nonzero"}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":116.27907,"y":93.75}},{"type":"lineTo","props":{"x":283.72093,"y":93.75}},{"type":"lineTo","props":{"x":269.767442,"y":127.5}},{"type":"lineTo","props":{"x":130.232558,"y":127.5}},{"type":"closePath","props":{}}]}},
{"type":"fillStyle","props":{"value":"#f2cc0c"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":130.232558,"y":127.5}},
{"type":"lineTo","props":{"x":269.767442,"y":127.5}},
{"type":"lineTo","props":{"x":261.395349,"y":161.25}},
{"type":"lineTo","props":{"x":138.604651,"y":161.25}},
{"type":"closePath","props":{}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":130.232558,"y":127.5}},{"type":"lineTo","props":{"x":269.767442,"y":127.5}},{"type":"lineTo","props":{"x":261.395349,"y":161.25}},{"type":"lineTo","props":{"x":138.604651,"y":161.25}},{"type":"closePath","props":{}}],"fillRule":"nonzero"}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":130.232558,"y":127.5}},{"type":"lineTo","props":{"x":269.767442,"y":127.5}},{"type":"lineTo","props":{"x":261.395349,"y":161.25}},{"type":"lineTo","props":{"x":138.604651,"y":161.25}},{"type":"closePath","props":{}}]}},
{"type":"fillStyle","props":{"value":"#ff9830"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":138.604651,"y":161.25}},
{"type":"lineTo","props":{"x":261.395349,"y":161.25}},
{"type":"lineTo","props":{"x":200,"y":195}},
{"type":"closePath","props":{}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":138.604651,"y":161.25}},{"type":"lineTo","props":{"x":261.395349,"y":161.25}},{"type":"lineTo","props":{"x":200,"y":195}},{"type":"closePath","props":{}}],"fillRule":"nonzero"}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":138.604651,"y":161.25}},{"type":"lineTo","props":{"x":261.395349,"y":161.25}},{"type":"lineTo","props":{"x":200,"y":195}},{"type":"closePath","props":{}}]}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"fillStyle","props":{"value":"#000000"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":2}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"center"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"Sales","x":200,"y":64.875,"maxWidth":null}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"center"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"43","x":200,"y":76.875,"maxWidth":null}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"center"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"36%","x":200,"y":88.875,"maxWidth":null}},
{"type":"fillStyle","props":{"value":"#ffffff"}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"center"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"IT","x":200,"y":98.625,"maxWidth":null}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"center"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"30","x":200,"y":110.625,"maxWidth":null}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"center"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"25%","x":200,"y":122.625,"maxWidth":null}},
{"type":"fillStyle","props":{"value":"#000000"}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"center"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"Admin","x":200,"y":132.375,"maxWidth":null}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"center"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"25","x":200,"y":144.375,"maxWidth":null}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"center"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"21%","x":200,"y":156.375,"maxWidth":null}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"center"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"Ops","x":200,"y":166.125,"maxWidth":null}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"center"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"22","x":200,"y":178.125,"maxWidth":null}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"center"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"18%","x":200,"y":190.125,"maxWidth":null}},
{"type":"restore","props":{}}
]
`;
